# docling-client-poc

./: package-lock.json  package.json
backend/: client.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.css  page.tsx
frontend/src/components/: ChatbotPanel.tsx  CostInfo.tsx  DoclingPreview.tsx  DocumentInfoBar.tsx  SelectionInfo.tsx
frontend/src/components/styles/: ChatbotPanel.css  CostInfo.css  DoclingPreview.css  DocumentInfoBar.css  SelectionInfo.css
src/app/: globals.css  page.css  page.tsx
src/components/: DoclingPreview.tsx  DocumentInfoBar.tsx
src/components/chatbot/: input.tsx
src/components/styles/: DocumentInfoBar.css
