[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "anthropic>=0.57.1",
    "docling-core>=2.43.0",
    "fastapi>=0.116.1",
    "mcp>=1.11.0",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
